[gd_scene load_steps=12 format=4 uid="uid://bk0i5jalykfml"]

[ext_resource type="PackedScene" uid="uid://vj40bldpstks" path="res://objects/modules/cgc/base_rooms/cgc_maze.tscn" id="1_1606g"]
[ext_resource type="PackedScene" uid="uid://p8gvfa1hsxhc" path="res://objects/props/cgc/hedge.tscn" id="2_l5ohi"]
[ext_resource type="Script" path="res://objects/modules/cgc/variants/maze_generator.gd" id="2_o0jwp"]
[ext_resource type="PackedScene" uid="uid://dxyq5lb5oineo" path="res://objects/interactables/treasure_chest/treasure_chest.tscn" id="3_6t6a2"]
[ext_resource type="Resource" uid="uid://j75am6rbrvrj" path="res://objects/items/pools/progressives.tres" id="4_5hufx"]

[sub_resource type="BoxShape3D" id="BoxShape3D_rrja6"]
size = Vector3(78.1612, 8.42456, 40.5476)

[sub_resource type="BoxShape3D" id="BoxShape3D_3yss0"]
size = Vector3(3.93109, 3.50305, 3.59717)

[sub_resource type="NavigationMesh" id="NavigationMesh_m1hy1"]
vertices = PackedVector3Array(-51.8231, 0.447327, -34.9044, -51.8231, 0.447327, -15.6544, -33.0731, 0.447327, -15.6544, -33.0731, 0.447327, -34.9044)
polygons = [PackedInt32Array(3, 2, 0), PackedInt32Array(0, 2, 1)]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_djm80"]
resource_name = "BossbotBattle_CogDoorHandShake_v5s7_collision"
vertex_color_use_as_albedo = true
albedo_color = Color(0.906332, 0, 0.906332, 1)
emission_enabled = true

[sub_resource type="ArrayMesh" id="ArrayMesh_2rar0"]
_surfaces = [{
"aabb": AABB(-290.209, -1.60547, -291.3, 577.166, 1e-05, 574.589),
"format": 34359742465,
"index_count": 6,
"index_data": PackedByteArray("DxAS/w8QEf8PEBH/"),
"name": "BossbotBattle_CogDoorHandShake_v5s7_collision",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 4,
"vertex_data": PackedByteArray("DxAS/w8QEf8PEBH/DxAR/w8QEv8PEBL/DxAS/w8QEv8PEBL/DxAS/w8QEv8PEBL/")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_knikk"]
resource_name = "collision_floor1"
_surfaces = [{
"aabb": AABB(-290.209, -1.60547, -291.3, 577.166, 1e-05, 574.589),
"attribute_data": PackedByteArray("DxAS/w8QEf8PEBH/DxAR/w8QEv8PEBL/DxAS/w8QEv8PEBL/DxAS/w8QEv8PEBL/"),
"format": 34359742495,
"index_count": 6,
"index_data": PackedByteArray("DxAS/w8QEf8PEBH/"),
"material": SubResource("StandardMaterial3D_djm80"),
"name": "BossbotBattle_CogDoorHandShake_v5s7_collision",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 4,
"vertex_data": PackedByteArray("DxAS/w8QEf8PEBH/DxAR/w8QEv8PEBL/DxAS/w8QEv8PEBL/DxAS/w8QEv8PEBL/DxAS/w8QEv8PEBL/DxAS/w8QEv8PEBL/DxAS/w8QEv8=")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_2rar0")

[node name="maze_c" instance=ExtResource("1_1606g")]
script = ExtResource("2_o0jwp")

[node name="treasure_chest" parent="MazeAll/BattleArea" index="2" instance=ExtResource("3_6t6a2")]
transform = Transform3D(-1.33232e-06, 0, -30.48, 0, 30.48, 0, 30.48, 0, -1.33232e-06, 232.745, -1.85891, -123.408)

[node name="treasure_chest2" parent="MazeAll/BattleArea" index="3" instance=ExtResource("3_6t6a2")]
transform = Transform3D(-1.33232e-06, 0, -30.48, 0, 30.48, 0, 30.48, 0, -1.33232e-06, 232.745, -1.859, 123.967)
item_pool = ExtResource("4_5hufx")

[node name="ENTRANCE" type="Node3D" parent="." index="25"]
transform = Transform3D(-1.4341e-09, 0, 0.0328084, 0, 0.0328084, 0, -0.0328084, 0, -1.4341e-09, -111.837, -2.51309e-07, -25.7772)

[node name="EXITS" type="Node3D" parent="." index="26"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -76.5565, -0.066, -25.777)

[node name="EXIT" type="Node3D" parent="EXITS" index="0"]
transform = Transform3D(0, 0, -0.0328084, 0, 0.0328084, 0, 0.0328084, 0, 0, 42.6198, 0.065987, 0.5732)

[node name="ExitTop" type="Node3D" parent="EXITS" index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 24.6126, 0, 0)

[node name="ExitBottom" type="Node3D" parent="EXITS" index="2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -24.8558, 0, 0)

[node name="ExitRight" type="Node3D" parent="EXITS" index="3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.459618, 0, 21.3088)

[node name="ExitLeft" type="Node3D" parent="EXITS" index="4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.459618, 0, -26.3614)

[node name="Maze" type="Node3D" parent="." index="27"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -76.6716, 1.58771, -26.0137)

[node name="MazeUnit" type="Node3D" parent="Maze" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 20, 0)
visible = false

[node name="HedgeFront" parent="Maze/MazeUnit" index="0" instance=ExtResource("2_l5ohi")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -2.24, 0, 0)

[node name="HedgeBack" parent="Maze/MazeUnit" index="1" instance=ExtResource("2_l5ohi")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 2.225, 0, 0)

[node name="HedgeLeft" parent="Maze/MazeUnit" index="2" instance=ExtResource("2_l5ohi")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2.225)

[node name="HedgeRight" parent="Maze/MazeUnit" index="3" instance=ExtResource("2_l5ohi")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2.225)

[node name="OutsideWalls" type="Node3D" parent="Maze" index="1"]

[node name="Front" type="Node3D" parent="Maze/OutsideWalls" index="0"]
transform = Transform3D(0.58, 0, 0, 0, 1, 0, 0, 0, 1, -18.309, 0, -0.065)

[node name="HedgeLeft" parent="Maze/OutsideWalls/Front" index="0" instance=ExtResource("2_l5ohi")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2.46583)

[node name="HedgeRight" parent="Maze/OutsideWalls/Front" index="1" instance=ExtResource("2_l5ohi")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3.022)

[node name="Back" type="Node3D" parent="Maze/OutsideWalls" index="1"]
transform = Transform3D(-0.515, 0, -1.50996e-07, 0, 1, 0, 7.77628e-08, 0, -1, 18.835, 0, 0.45)

[node name="HedgeLeft" parent="Maze/OutsideWalls/Back" index="0" instance=ExtResource("2_l5ohi")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2.46583)

[node name="HedgeRight" parent="Maze/OutsideWalls/Back" index="1" instance=ExtResource("2_l5ohi")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3.022)

[node name="Left" type="Node3D" parent="Maze/OutsideWalls" index="2"]
transform = Transform3D(-2.53526e-08, 0, 1, 0, 1, 0, -0.58, 0, -4.37114e-08, -0.578239, 0, -18.0676)

[node name="HedgeLeft" parent="Maze/OutsideWalls/Left" index="0" instance=ExtResource("2_l5ohi")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2.46583)

[node name="HedgeRight" parent="Maze/OutsideWalls/Left" index="1" instance=ExtResource("2_l5ohi")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3.022)

[node name="Right" type="Node3D" parent="Maze/OutsideWalls" index="3"]
transform = Transform3D(-2.53526e-08, 0, 1, 0, 1, 0, -0.58, 0, -4.37114e-08, -0.578, 0, 18.45)

[node name="HedgeLeft" parent="Maze/OutsideWalls/Right" index="0" instance=ExtResource("2_l5ohi")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2.46583)

[node name="HedgeRight" parent="Maze/OutsideWalls/Right" index="1" instance=ExtResource("2_l5ohi")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3.022)

[node name="GeneratedMaze" type="Node3D" parent="Maze" index="2"]
transform = Transform3D(0.96, 0, 0, 0, 1, 0, 0, 0, 1, 16.479, 0, -13.167)

[node name="RoomAreaShape" type="CollisionShape3D" parent="." index="28"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -73.1973, 4.14661, -26.1056)
shape = SubResource("BoxShape3D_rrja6")

[node name="EntranceCollision" type="CollisionShape3D" parent="." index="29"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -95.4704, 1.68505, -25.7979)
shape = SubResource("BoxShape3D_3yss0")

[node name="ExitCollision" type="CollisionShape3D" parent="." index="30"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -51.0534, 2.02202, -25.7979)
shape = SubResource("BoxShape3D_3yss0")

[node name="LosePos" type="Node3D" parent="." index="31"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -51.6543, 0.270499, -25.7979)

[node name="Navigation" type="NavigationRegion3D" parent="." index="32"]
visible = false
navigation_mesh = SubResource("NavigationMesh_m1hy1")

[node name="collision_floor2" type="MeshInstance3D" parent="Navigation" index="0"]
transform = Transform3D(0.0343129, 0, 0, 0, 0.0328084, 0, 0, 0, 0.0354032, -42.3652, 0, -25.0915)
mesh = SubResource("ArrayMesh_knikk")
skeleton = NodePath("")
